manifests/dust-poc/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dust-poc
spec:
  template:
    spec:

      containers:
      - name: app
