manifests/dust-poc/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dust-poc-int
  annotations:
    kubernetes.io/ingress.class: wg69
    external-dns.alpha.kubernetes.io/ttl: "600"
    nginx.ingress.kubernetes.io/whitelist-source-range: 10.69.1.1/27
spec:
  rules:

  - host: dustbox.wg69.net
    http:
      paths:
      - path: /
        backend:
          serviceName: dust-poc
          servicePort: 80
